added default images

--- a/source/directions.html
+++ b/source/directions.html
@@ -17,18 +17,20 @@
 <body class="page__body">
   <header class="page-header page-header--border-radius page-header--height page-header--light-theme">
     <div class="container page-header__menu  menu">
-      <a href="index.html" class="menu__logo-mobile">
+      <a href="#" class="menu__logo-mobile">
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo.webp 1x, img/logo@2x.webp 2x">
           <source media="(min-width: 768px)" srcset="img/logo-medium.webp 1x, img/logo-medium@2x.webp 2x">
-          <img class="page-header__logo logo" src="img/logo-mobile.webp" srcset="img/logo-mobile@2x.webp 2x" width="226"
+          <source srcset="img/logo-mobile.webp 1x, img/logo-mobile@2x.webp 2x">
+          <img class="page-header__logo logo" src="img/logo-mobile.png" srcset="img/logo-mobile@2x.png 2x" width="226"
             height="30" alt="Логотип" />
         </picture>
       </a>
-      <a href="index.html" class="menu__logo-mobile-dark visually-hidden">
+      <a href="#" class="menu__logo-mobile-dark visually-hidden">
         <picture>
           <source media="(min-width: 768px)" srcset="img/logo-medium-dark.webp 1x, img/logo-medium-dark@2x.webp 2x">
-          <img class="page-header__logo logo" src="img/logo-mobile-dark.webp" srcset="img/logo-mobile-dark@2x.webp 2x"
+          <source srcset="img/logo-mobile-dark.webp 1x, img/logo-mobile-dark@2x.webp 2x">
+          <img class="page-header__logo logo" src="img/logo-mobile-dark.png" srcset="img/logo-mobile-dark@2x.png 2x"
             width="226" height="30" alt="Логотип" />
         </picture>
       </a>
@@ -171,8 +173,9 @@
                 srcset="img/demin-avatar-large.webp 1x, img/demin-avatar-large@2x.webp 2x">
               <source media="(min-width: 768px)"
                 srcset="img/demin-avatar-medium.webp 1x, img/demin-avatar-medium@2x.webp 2x">
-              <img class="user-info__avatar" src="img/demin-avatar-small.webp"
-                srcset="img/demin-avatar-small@2x.webp 2x" alt="Фотография Демина" width="100" height="100" />
+              <source srcset="img/demin-avatar-small.webp 1x, img/demin-avatar-small@2x.webp 2x">
+              <img class="user-info__avatar" src="img/demin-avatar-small.png" srcset="img/demin-avatar-small@2x.png 2x"
+                alt="Фотография Демина" width="100" height="100" />
             </picture>
           </div>
           <button
@@ -600,9 +603,11 @@
                         <picture>
                           <source media="(min-width: 768px)"
                             srcset="img/bosnia-and-herzegovina-flag-medium.webp 1x, img/bosnia-and-herzegovina-flag-medium@2x.webp 2x">
+                          <source
+                            srcset="img/bosnia-and-herzegovina-flag-small.webp 1x, img/bosnia-and-herzegovina-flag-small@2x.webp 2x">
                           <img class="add-plans__flag-image select-input-list__flag"
-                            src="img/bosnia-and-herzegovina-flag-small.webp"
-                            srcset="img/bosnia-and-herzegovina-flag-small@2x.webp 2x" width="35" height="24"
+                            src="img/bosnia-and-herzegovina-flag-small.png"
+                            srcset="img/bosnia-and-herzegovina-flag-small@2x.png 2x" width="35" height="24"
                             alt="Флаг Боснии и Герцеговины" />
                         </picture>
                         <svg class="add-plans__remove-country-icon add-plans__remove-country-icon--selected" width="21"
@@ -767,8 +772,9 @@
                         <picture>
                           <source media="(min-width: 768px)"
                             srcset="img/czech-flag-medium.webp 1x, img/czech-flag-medium@2x.webp 2x">
-                          <img class="add-plans__flag-image select-input-list__flag" src="img/czech-flag-small.webp"
-                            srcset="img/czech-flag-small@2x.webp 2x" width="35" height="24" alt="Флаг Чехии" />
+                          <source srcset="img/czech-flag-small.webp 1x, img/czech-flag-small@2x.webp 2x">
+                          <img class="add-plans__flag-image select-input-list__flag" src="img/czech-flag-small.png"
+                            srcset="img/czech-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Чехии" />
                         </picture>
                         <svg class="add-plans__remove-country-icon add-plans__remove-country-icon--selected" width="21"
                           height="21">
@@ -1162,11 +1168,12 @@
   <footer class="page-footer">
     <div class="page-footer__container container">
       <h2 class="visually-hidden">Погнали?</h2>
-      <a href="index.html">
+      <a href="#">
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo-large-dark.webp 1x, img/logo-large-dark@2x.webp 2x">
           <source media="(min-width: 768px)" srcset="img/logo-medium-dark.webp 1x, img/logo-medium-dark@2x.webp 2x">
-          <img class="page-fotter__logo logo" src="img/logo-mobile-dark.webp" srcset="img/logo-mobile-dark@2x.webp 2x"
+          <source srcset="img/logo-mobile-dark.webp 1x, img/logo-mobile-dark@2x.webp 2x">
+          <img class="page-fotter__logo logo" src="img/logo-mobile-dark.png" srcset="img/logo-mobile-dark@2x.png 2x"
             width="226" height="30" alt="Логотип" />
         </picture>
       </a>
