--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,9 @@
       <a href="#" class="menu__logo-mobile">
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo.webp 1x, img/logo@2x.webp 2x">
+          <source media="(min-width: 1440px)" srcset="img/logo.png 1x, img/logo@2x.png 2x">
           <source media="(min-width: 768px)" srcset="img/logo-medium.webp 1x, img/logo-medium@2x.webp 2x">
+          <source media="(min-width: 768px)" srcset="img/logo-medium.png 1x, img/logo-medium@2x.png 2x">
           <source srcset="img/logo-mobile.webp 1x, img/logo-mobile@2x.webp 2x">
           <img class="page-header__logo logo" src="img/logo-mobile.png" srcset="img/logo-mobile@2x.png 2x" width="226"
             height="30" alt="Логотип" />
@@ -28,6 +30,7 @@
       <a href="#" class="menu__logo-mobile-dark visually-hidden">
         <picture>
           <source media="(min-width: 768px)" srcset="img/logo-medium-dark.webp 1x, img/logo-medium-dark@2x.webp 2x">
+          <source media="(min-width: 768px)" srcset="img/logo-medium-dark.png 1x, img/logo-medium-dark@2x.png 2x">
           <source srcset="img/logo-mobile-dark.webp 1x, img/logo-mobile-dark@2x.webp 2x">
           <img class="page-header__logo logo" src="img/logo-mobile-dark.png" srcset="img/logo-mobile-dark@2x.png 2x"
             width="226" height="30" alt="Логотип" />
@@ -159,8 +162,12 @@
             <picture>
               <source media="(min-width: 1440px)"
                 srcset="img/traveller-illustration-large.webp 1x, img/traveller-illustration-large@2x.webp 2x">
+              <source media="(min-width: 1440px)"
+                srcset="img/traveller-illustration-large.png 1x, img/traveller-illustration-large@2x.png 2x">
               <source media="(min-width: 768px)"
                 srcset="img/traveller-illustration-medium.webp 1x, img/traveller-illustration-medium@2x.webp 2x">
+              <source media="(min-width: 768px)"
+                srcset="img/traveller-illustration-medium.png 1x, img/traveller-illustration-medium@2x.png 2x">
               <source srcset="img/traveller-illustration.webp 1x, img/traveller-illustration@2x.webp 2x">
               <img class="promo__traveller-icon" src="img/traveller-illustration.png"
                 srcset="img/traveller-illustration@2x.png 2x" width="192" height="255" alt="Путешественник" />
@@ -297,6 +304,7 @@
                 <picture>
                   <source media="(min-width: 768px)"
                     srcset="img/thailand-medium.webp 1x, img/thailand-medium@2x.webp 2x">
+                  <source media="(min-width: 768px)" srcset="img/thailand-medium.png 1x, img/thailand-medium@2x.png 2x">
                   <source srcset="img/thailand-small.webp 1x, img/thailand-small@2x.webp 2x">
                   <img class="countries__photo" src="img/thailand-small.png" srcset="img/thailand-small@2x.png 2x"
                     width="270" height="110" alt="Тайланд" />
@@ -305,6 +313,8 @@
                   <picture>
                     <source media="(min-width: 768px)"
                       srcset="img/thailand-flag-medium.webp 1x, img/thailand-flag-medium@2x.webp 2x">
+                    <source media="(min-width: 768px)"
+                      srcset="img/thailand-flag-medium.png 1x, img/thailand-flag-medium@2x.png 2x">
                     <source srcset="img/thailand-flag-small.webp 1x, img/thailand-flag-small@2x.webp 2x">
                     <img class="countries__flag card-list__flag flag" src="img/thailand-flag-small.png"
                       srcset="img/thailand-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Тайланда" />
@@ -334,6 +344,7 @@
               <div class="countries__cards card-list__card">
                 <picture>
                   <source media="(min-width: 768px)" srcset="img/france-medium.webp 1x, img/france-medium@2x.webp 2x">
+                  <source media="(min-width: 768px)" srcset="img/france-medium.png 1x, img/france-medium@2x.png 2x">
                   <source srcset="img/france-small.webp 1x, img/france-small@2x.webp 2x">
                   <img class="countries__photo" src="img/france-small.png" srcset="img/france-small@2x.png 2x"
                     width="270" height="110" alt="Франция" />
@@ -342,6 +353,8 @@
                   <picture>
                     <source media="(min-width: 768px)"
                       srcset="img/france-flag-medium.webp 1x, img/france-flag-medium@2x.webp 2x">
+                    <source media="(min-width: 768px)"
+                      srcset="img/france-flag-medium.png 1x, img/france-flag-medium@2x.png 2x">
                     <source srcset="img/france-flag-small.webp 1x, img/france-flag-small@2x.webp 2x">
                     <img class="countries__flag card-list__flag flag" src="img/france-flag-small.png"
                       srcset="img/france-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Франции" />
@@ -371,6 +384,7 @@
               <div class="countries__cards card-list__card">
                 <picture>
                   <source media="(min-width: 768px)" srcset="img/czech-medium.webp 1x, img/czech-medium@2x.webp 2x">
+                  <source media="(min-width: 768px)" srcset="img/czech-medium.png 1x, img/czech-medium@2x.png 2x">
                   <source srcset="img/czech-small.webp 1x, img/czech-small@2x.webp 2x">
                   <img class="countries__photo" src="img/czech-small.png" srcset="img/czech-small@2x.png 2x" width="270"
                     height="110" alt="Чехия" />
@@ -379,6 +393,8 @@
                   <picture>
                     <source media="(min-width: 768px)"
                       srcset="img/czech-flag-medium.webp 1x, img/czech-flag-medium@2x.webp 2x">
+                    <source media="(min-width: 768px)"
+                      srcset="img/czech-flag-medium.png 1x, img/czech-flag-medium@2x.png 2x">
                     <source srcset="img/czech-flag-small.webp 1x, img/czech-flag-small@2x.webp 2x">
                     <img class="countries__flag card-list__flag flag" src="img/czech-flag-small.png"
                       srcset="img/czech-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Чехии" />
@@ -434,8 +450,12 @@
                 <picture>
                   <source media="(min-width: 1440px)"
                     srcset="img/tanya-photo-large.webp 1x, img/tanya-photo-large@2x.webp 2x">
+                  <source media="(min-width: 1440px)"
+                    srcset="img/tanya-photo-large.png 1x, img/tanya-photo-large@2x.png 2x">
                   <source media="(min-width: 768px)"
                     srcset="img/tanya-photo-medium.webp 1x, img/tanya-photo-medium@2x.webp 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/tanya-photo-medium.png 1x, img/tanya-photo-medium@2x.png 2x">
                   <source srcset="img/tanya-photo.webp 1x, img/tanya-photo@2x.webp 2x">
                   <img class="users__photo" src="img/tanya-photo.png" srcset="img/tanya-photo@2x.png 2x" width="226"
                     height="30" alt="Фото Тани Фирсовой" />
@@ -451,6 +471,8 @@
                       <picture>
                         <source media="(min-width: 768px)"
                           srcset="img/seychelles-flag-medium.webp 1x, img/seychelles-flag-medium@2x.webp 2x">
+                        <source media="(min-width: 768px)"
+                          srcset="img/seychelles-flag-medium.png 1x, img/seychelles-flag-medium@2x.png 2x">
                         <source srcset="img/seychelles-flag-small.webp 1x, img/seychelles-flag-small@2x.webp 2x">
                         <img class="users__flag  flag" src="img/seychelles-flag-small.png"
                           srcset="img/seychelles-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Сейшилы" />
@@ -463,6 +485,8 @@
                       <picture>
                         <source media="(min-width: 768px)"
                           srcset="img/thailand-flag-medium.webp 1x, img/thailand-flag-medium@2x.webp 2x">
+                        <source media="(min-width: 768px)"
+                          srcset="img/thailand-flag-medium.png 1x, img/thailand-flag-medium@2x.png 2x">
                         <source srcset="img/thailand-flag-small.webp 1x, img/thailand-flag-small@2x.webp 2x">
                         <img class="users__flag  flag" src="img/thailand-flag-small.png"
                           srcset="img/thailand-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Тайланда" />
@@ -475,6 +499,8 @@
                       <picture>
                         <source media="(min-width: 768px)"
                           srcset="img/sri-lanka-flag-medium.webp 1x, img/sri-lanka-flag-medium@2x.webp 2x">
+                        <source media="(min-width: 768px)"
+                          srcset="img/sri-lanka-flag-medium.png 1x, img/sri-lanka-flag-medium@2x.png 2x">
                         <source srcset="img/sri-lanka-flag-small.webp 1x, img/sri-lanka-flag-small@2x.webp 2x">
                         <img class="users__flag  flag" src="img/sri-lanka-flag-small.png"
                           srcset="img/sri-lanka-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Шри-Ланки" />
@@ -556,8 +582,12 @@
                 <picture>
                   <source media="(min-width: 1440px)"
                     srcset="img/demin-photo-large.webp 1x, img/demin-photo-large@2x.webp 2x">
+                  <source media="(min-width: 1440px)"
+                    srcset="img/demin-photo-large.png 1x, img/demin-photo-large@2x.png 2x">
                   <source media="(min-width: 768px)"
                     srcset="img/demin-photo-medium.webp 1x, img/demin-photo-medium@2x.webp 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/demin-photo-medium.png 1x, img/demin-photo-medium@2x.png 2x">
                   <source srcset="img/demin-photo.webp 1x, img/demin-photo@2x.webp 2x">
                   <img class="users__photo" src="img/demin-photo.png" srcset="img/demin-photo@2x.png 2x" width="226"
                     height="30" alt="Фото Петра Демина" />
@@ -573,6 +603,8 @@
                       <picture>
                         <source media="(min-width: 768px)"
                           srcset="img/belgium-flag-medium.webp 1x, img/belgium-flag-medium@2x.webp 2x">
+                        <source media="(min-width: 768px)"
+                          srcset="img/belgium-flag-medium.png 1x, img/belgium-flag-medium@2x.png 2x">
                         <source srcset="img/belgium-flag-small.webp 1x, img/belgium-flag-small@2x.webp 2x">
                         <img class="users__flag  flag" src="img/belgium-flag-small.png"
                           srcset="img/belgium-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Бельгии" />
@@ -585,6 +617,8 @@
                       <picture>
                         <source media="(min-width: 768px)"
                           srcset="img/czech-flag-medium.webp 1x, img/czech-flag-medium@2x.webp 2x">
+                        <source media="(min-width: 768px)"
+                          srcset="img/czech-flag-medium.png 1x, img/czech-flag-medium@2x.png 2x">
                         <source srcset="img/czech-flag-small.webp 1x, img/czech-flag-small@2x.webp 2x">
                         <img class="users__flag flag" src="img/czech-flag-small.png"
                           srcset="img/czech-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Чехии" />
@@ -821,7 +855,9 @@
       </header>
       <picture>
         <source media="(min-width: 1440px)" srcset="img/map-large-icon.webp 1x, img/map-large-icon@2x.webp 2x">
+        <source media="(min-width: 1440px)" srcset="img/map-large-icon.png 1x, img/map-large-icon@2x.png 2x">
         <source media="(min-width: 768px)" srcset="img/map-medium-icon.webp 1x, img/map-medium-icon@2x.webp 2x">
+        <source media="(min-width: 768px)" srcset="img/map-medium-icon.png 1x, img/map-medium-icon@2x.png 2x">
         <source srcset="img/map-small-icon.webp 1x, img/map-small-icon@2x.webp 2x">
         <img class="contacts__map" src="img/map-small-icon.png" srcset="img/map-small-icon@2x.png 2x" width="320"
           height="424" alt="Карта" />
@@ -837,7 +873,9 @@
       <a href="#">
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo-large-dark.webp 1x, img/logo-large-dark@2x.webp 2x">
+          <source media="(min-width: 1440px)" srcset="img/logo-large-dark.png 1x, img/logo-large-dark@2x.png 2x">
           <source media="(min-width: 768px)" srcset="img/logo-medium-dark.webp 1x, img/logo-medium-dark@2x.webp 2x">
+          <source media="(min-width: 768px)" srcset="img/logo-medium-dark.png 1x, img/logo-medium-dark@2x.png 2x">
           <source srcset="img/logo-mobile-dark.webp 1x, img/logo-mobile-dark@2x.webp 2x">
           <img class="page-fotter__logo logo" src="img/logo-mobile-dark.png" srcset="img/logo-mobile-dark@2x.png 2x"
             width="226" height="30" alt="Логотип" />
