--- a/source/directions.html
+++ b/source/directions.html
@@ -20,7 +20,9 @@
       <a href="#" class="menu__logo-mobile">
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo.webp 1x, img/logo@2x.webp 2x">
+          <source media="(min-width: 1440px)" srcset="img/logo.png 1x, img/logo@2x.png 2x">
           <source media="(min-width: 768px)" srcset="img/logo-medium.webp 1x, img/logo-medium@2x.webp 2x">
+          <source media="(min-width: 768px)" srcset="img/logo-medium.png 1x, img/logo-medium@2x.png 2x">
           <source srcset="img/logo-mobile.webp 1x, img/logo-mobile@2x.webp 2x">
           <img class="page-header__logo logo" src="img/logo-mobile.png" srcset="img/logo-mobile@2x.png 2x" width="226"
             height="30" alt="Логотип" />
@@ -29,6 +31,7 @@
       <a href="#" class="menu__logo-mobile-dark visually-hidden">
         <picture>
           <source media="(min-width: 768px)" srcset="img/logo-medium-dark.webp 1x, img/logo-medium-dark@2x.webp 2x">
+          <source media="(min-width: 768px)" srcset="img/logo-medium-dark.png 1x, img/logo-medium-dark@2x.png 2x">
           <source srcset="img/logo-mobile-dark.webp 1x, img/logo-mobile-dark@2x.webp 2x">
           <img class="page-header__logo logo" src="img/logo-mobile-dark.png" srcset="img/logo-mobile-dark@2x.png 2x"
             width="226" height="30" alt="Логотип" />
@@ -171,8 +174,12 @@
             <picture>
               <source media="(min-width: 1440px)"
                 srcset="img/demin-avatar-large.webp 1x, img/demin-avatar-large@2x.webp 2x">
+              <source media="(min-width: 1440px)"
+                srcset="img/demin-avatar-large.png 1x, img/demin-avatar-large@2x.png 2x">
               <source media="(min-width: 768px)"
                 srcset="img/demin-avatar-medium.webp 1x, img/demin-avatar-medium@2x.webp 2x">
+              <source media="(min-width: 768px)"
+                srcset="img/demin-avatar-medium.png 1x, img/demin-avatar-medium@2x.png 2x">
               <source srcset="img/demin-avatar-small.webp 1x, img/demin-avatar-small@2x.webp 2x">
               <img class="user-info__avatar" src="img/demin-avatar-small.png" srcset="img/demin-avatar-small@2x.png 2x"
                 alt="Фотография Демина" width="100" height="100" />
@@ -603,6 +610,8 @@
                         <picture>
                           <source media="(min-width: 768px)"
                             srcset="img/bosnia-and-herzegovina-flag-medium.webp 1x, img/bosnia-and-herzegovina-flag-medium@2x.webp 2x">
+                          <source media="(min-width: 768px)"
+                            srcset="img/bosnia-and-herzegovina-flag-medium.png 1x, img/bosnia-and-herzegovina-flag-medium@2x.png 2x">
                           <source
                             srcset="img/bosnia-and-herzegovina-flag-small.webp 1x, img/bosnia-and-herzegovina-flag-small@2x.webp 2x">
                           <img class="add-plans__flag-image select-input-list__flag"
@@ -772,6 +781,8 @@
                         <picture>
                           <source media="(min-width: 768px)"
                             srcset="img/czech-flag-medium.webp 1x, img/czech-flag-medium@2x.webp 2x">
+                          <source media="(min-width: 768px)"
+                            srcset="img/czech-flag-medium.png 1x, img/czech-flag-medium@2x.png 2x">
                           <source srcset="img/czech-flag-small.webp 1x, img/czech-flag-small@2x.webp 2x">
                           <img class="add-plans__flag-image select-input-list__flag" src="img/czech-flag-small.png"
                             srcset="img/czech-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Чехии" />
@@ -1113,8 +1124,12 @@
                       <picture>
                         <source media="(min-width: 768px)"
                           srcset="img/bosnia-and-herzegovina-flag-medium.webp 1x, img/bosnia-and-herzegovina-flag-medium@2x.webp 2x">
-                        <img class="country-description-list__flag" src="img/bosnia-and-herzegovina-flag-small.webp"
-                          srcset="img/bosnia-and-herzegovina-flag-small@2x.webp 2x" width="35" height="24"
+                        <source media="(min-width: 768px)"
+                          srcset="img/bosnia-and-herzegovina-flag-medium.png 1x, img/bosnia-and-herzegovina-flag-medium@2x.png 2x">
+                        <source
+                          srcset="img/bosnia-and-herzegovina-flag-small.webp 1x, img/bosnia-and-herzegovina-flag-small@2x.webp 2x">
+                        <img class="country-description-list__flag" src="img/bosnia-and-herzegovina-flag-small.png"
+                          srcset="img/bosnia-and-herzegovina-flag-small@2x.png 2x" width="35" height="24"
                           alt="Флаг Боснии и Герцеговины" />
                       </picture>
                     </div>
@@ -1128,8 +1143,11 @@
                       <picture>
                         <source media="(min-width: 768px)"
                           srcset="img/czech-flag-medium.webp 1x, img/czech-flag-medium@2x.webp 2x">
-                        <img class="country-description-list__flag" src="img/czech-flag-small.webp"
-                          srcset="img/czech-flag-small@2x.webp 2x" width="35" height="24" alt="Флаг Чехии" />
+                        <source media="(min-width: 768px)"
+                          srcset="img/czech-flag-medium.png 1x, img/czech-flag-medium@2x.png 2x">
+                        <source srcset="img/czech-flag-small.webp 1x, img/czech-flag-small@2x.webp 2x">
+                        <img class="country-description-list__flag" src="img/czech-flag-small.png"
+                          srcset="img/czech-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Чехии" />
                       </picture>
                     </div>
                     <textarea class="country-description-list__change-text text"
@@ -1171,7 +1189,9 @@
       <a href="#">
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo-large-dark.webp 1x, img/logo-large-dark@2x.webp 2x">
+          <source media="(min-width: 1440px)" srcset="img/logo-large-dark.png 1x, img/logo-large-dark@2x.png 2x">
           <source media="(min-width: 768px)" srcset="img/logo-medium-dark.webp 1x, img/logo-medium-dark@2x.webp 2x">
+          <source media="(min-width: 768px)" srcset="img/logo-medium-dark.png 1x, img/logo-medium-dark@2x.png 2x">
           <source srcset="img/logo-mobile-dark.webp 1x, img/logo-mobile-dark@2x.webp 2x">
           <img class="page-fotter__logo logo" src="img/logo-mobile-dark.png" srcset="img/logo-mobile-dark@2x.png 2x"
             width="226" height="30" alt="Логотип" />
