--- a/source/directions.html
+++ b/source/directions.html
@@ -8,7 +8,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/style.min.css" rel="preload" as="style">
+  <link href="css/style.min.css" rel="stylesheet">
   <link rel="icon" href="favicon.png" sizes="16x16" type="image/png">
   <title>Направления</title>
 </head>
@@ -19,20 +19,24 @@
     <div class="container page-header__menu  menu">
       <a href="#" class="menu__logo-mobile">
         <picture>
-          <source media="(min-width: 1440px)" srcset="img/logo.webp 1x, img/logo@2x.webp 2x">
-          <source media="(min-width: 1440px)" srcset="img/logo.png 1x, img/logo@2x.png 2x">
-          <source media="(min-width: 768px)" srcset="img/logo-medium.webp 1x, img/logo-medium@2x.webp 2x">
-          <source media="(min-width: 768px)" srcset="img/logo-medium.png 1x, img/logo-medium@2x.png 2x">
-          <source srcset="img/logo-mobile.webp 1x, img/logo-mobile@2x.webp 2x">
+          <source media="(min-width: 1440px)" srcset="img/logo.webp 1x, img/logo@2x.webp 2x" type="image/webp">
+          <source media="(min-width: 1440px)" srcset="img/logo.png 1x, img/logo@2x.png 2x" type="image/png">
+          <source media="(min-width: 768px)" srcset="img/logo-medium.webp 1x, img/logo-medium@2x.webp 2x"
+            type="image/webp">
+          <source media="(min-width: 768px)" srcset="img/logo-medium.png 1x, img/logo-medium@2x.png 2x"
+            type="image/png">
+          <source srcset="img/logo-mobile.webp 1x, img/logo-mobile@2x.webp 2x" type="image/webp">
           <img class="page-header__logo logo" src="img/logo-mobile.png" srcset="img/logo-mobile@2x.png 2x" width="226"
             height="30" alt="Логотип" />
         </picture>
       </a>
       <a href="#" class="menu__logo-mobile-dark visually-hidden">
         <picture>
-          <source media="(min-width: 768px)" srcset="img/logo-medium-dark.webp 1x, img/logo-medium-dark@2x.webp 2x">
-          <source media="(min-width: 768px)" srcset="img/logo-medium-dark.png 1x, img/logo-medium-dark@2x.png 2x">
-          <source srcset="img/logo-mobile-dark.webp 1x, img/logo-mobile-dark@2x.webp 2x">
+          <source media="(min-width: 768px)" srcset="img/logo-medium-dark.webp 1x, img/logo-medium-dark@2x.webp 2x"
+            type="image/webp">
+          <source media="(min-width: 768px)" srcset="img/logo-medium-dark.png 1x, img/logo-medium-dark@2x.png 2x"
+            type="image/png">
+          <source srcset="img/logo-mobile-dark.webp 1x, img/logo-mobile-dark@2x.webp 2x" type="image/webp">
           <img class="page-header__logo logo" src="img/logo-mobile-dark.png" srcset="img/logo-mobile-dark@2x.png 2x"
             width="226" height="30" alt="Логотип" />
         </picture>
@@ -173,14 +177,14 @@
           <div class="user-info__avatars">
             <picture>
               <source media="(min-width: 1440px)"
-                srcset="img/demin-avatar-large.webp 1x, img/demin-avatar-large@2x.webp 2x">
+                srcset="img/demin-avatar-large.webp 1x, img/demin-avatar-large@2x.webp 2x" type="image/webp">
               <source media="(min-width: 1440px)"
-                srcset="img/demin-avatar-large.png 1x, img/demin-avatar-large@2x.png 2x">
+                srcset="img/demin-avatar-large.png 1x, img/demin-avatar-large@2x.png 2x" type="image/png">
               <source media="(min-width: 768px)"
-                srcset="img/demin-avatar-medium.webp 1x, img/demin-avatar-medium@2x.webp 2x">
+                srcset="img/demin-avatar-medium.webp 1x, img/demin-avatar-medium@2x.webp 2x" type="image/webp">
               <source media="(min-width: 768px)"
-                srcset="img/demin-avatar-medium.png 1x, img/demin-avatar-medium@2x.png 2x">
-              <source srcset="img/demin-avatar-small.webp 1x, img/demin-avatar-small@2x.webp 2x">
+                srcset="img/demin-avatar-medium.png 1x, img/demin-avatar-medium@2x.png 2x" type="image/png">
+              <source srcset="img/demin-avatar-small.webp 1x, img/demin-avatar-small@2x.webp 2x" type="image/webp">
               <img class="user-info__avatar" src="img/demin-avatar-small.png" srcset="img/demin-avatar-small@2x.png 2x"
                 alt="Фотография Демина" width="100" height="100" />
             </picture>
@@ -609,11 +613,14 @@
                         </svg>
                         <picture>
                           <source media="(min-width: 768px)"
-                            srcset="img/bosnia-and-herzegovina-flag-medium.webp 1x, img/bosnia-and-herzegovina-flag-medium@2x.webp 2x">
+                            srcset="img/bosnia-and-herzegovina-flag-medium.webp 1x, img/bosnia-and-herzegovina-flag-medium@2x.webp 2x"
+                            type="image/webp">
                           <source media="(min-width: 768px)"
-                            srcset="img/bosnia-and-herzegovina-flag-medium.png 1x, img/bosnia-and-herzegovina-flag-medium@2x.png 2x">
+                            srcset="img/bosnia-and-herzegovina-flag-medium.png 1x, img/bosnia-and-herzegovina-flag-medium@2x.png 2x"
+                            type="image/png">
                           <source
-                            srcset="img/bosnia-and-herzegovina-flag-small.webp 1x, img/bosnia-and-herzegovina-flag-small@2x.webp 2x">
+                            srcset="img/bosnia-and-herzegovina-flag-small.webp 1x, img/bosnia-and-herzegovina-flag-small@2x.webp 2x"
+                            type="image/webp">
                           <img class="add-plans__flag-image select-input-list__flag"
                             src="img/bosnia-and-herzegovina-flag-small.png"
                             srcset="img/bosnia-and-herzegovina-flag-small@2x.png 2x" width="35" height="24"
@@ -780,10 +787,11 @@
                         </svg>
                         <picture>
                           <source media="(min-width: 768px)"
-                            srcset="img/czech-flag-medium.webp 1x, img/czech-flag-medium@2x.webp 2x">
+                            srcset="img/czech-flag-medium.webp 1x, img/czech-flag-medium@2x.webp 2x" type="image/webp">
                           <source media="(min-width: 768px)"
-                            srcset="img/czech-flag-medium.png 1x, img/czech-flag-medium@2x.png 2x">
-                          <source srcset="img/czech-flag-small.webp 1x, img/czech-flag-small@2x.webp 2x">
+                            srcset="img/czech-flag-medium.png 1x, img/czech-flag-medium@2x.png 2x" type="image/png">
+                          <source srcset="img/czech-flag-small.webp 1x, img/czech-flag-small@2x.webp 2x"
+                            type="image/webp">
                           <img class="add-plans__flag-image select-input-list__flag" src="img/czech-flag-small.png"
                             srcset="img/czech-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Чехии" />
                         </picture>
@@ -1123,17 +1131,22 @@
                       </h4>
                       <picture>
                         <source media="(min-width: 768px)"
-                          srcset="img/bosnia-and-herzegovina-flag-medium.webp 1x, img/bosnia-and-herzegovina-flag-medium@2x.webp 2x">
+                          srcset="img/bosnia-and-herzegovina-flag-medium.webp 1x, img/bosnia-and-herzegovina-flag-medium@2x.webp 2x"
+                          type="image/webp">
                         <source media="(min-width: 768px)"
-                          srcset="img/bosnia-and-herzegovina-flag-medium.png 1x, img/bosnia-and-herzegovina-flag-medium@2x.png 2x">
+                          srcset="img/bosnia-and-herzegovina-flag-medium.png 1x, img/bosnia-and-herzegovina-flag-medium@2x.png 2x"
+                          type="image/png">
                         <source
-                          srcset="img/bosnia-and-herzegovina-flag-small.webp 1x, img/bosnia-and-herzegovina-flag-small@2x.webp 2x">
+                          srcset="img/bosnia-and-herzegovina-flag-small.webp 1x, img/bosnia-and-herzegovina-flag-small@2x.webp 2x"
+                          type="image/webp">
                         <img class="country-description-list__flag" src="img/bosnia-and-herzegovina-flag-small.png"
                           srcset="img/bosnia-and-herzegovina-flag-small@2x.png 2x" width="35" height="24"
                           alt="Флаг Боснии и Герцеговины" />
                       </picture>
                     </div>
-                    <textarea class="country-description-list__change-text text" placeholder="План действий"></textarea>
+                    <textarea class="country-description-list__change-text text" placeholder="План действий"
+                      required></textarea>
+                    <div class="country-description-list__change-text-invalid">Это поле должно быть заполнено</div>
                   </li>
                   <li class="country-description-list__item">
                     <div class="country-description-list__country">
@@ -1142,16 +1155,18 @@
                       </h4>
                       <picture>
                         <source media="(min-width: 768px)"
-                          srcset="img/czech-flag-medium.webp 1x, img/czech-flag-medium@2x.webp 2x">
+                          srcset="img/czech-flag-medium.webp 1x, img/czech-flag-medium@2x.webp 2x" type="image/webp">
                         <source media="(min-width: 768px)"
-                          srcset="img/czech-flag-medium.png 1x, img/czech-flag-medium@2x.png 2x">
-                        <source srcset="img/czech-flag-small.webp 1x, img/czech-flag-small@2x.webp 2x">
+                          srcset="img/czech-flag-medium.png 1x, img/czech-flag-medium@2x.png 2x" type="image/png">
+                        <source srcset="img/czech-flag-small.webp 1x, img/czech-flag-small@2x.webp 2x"
+                          type="image/webp">
                         <img class="country-description-list__flag" src="img/czech-flag-small.png"
                           srcset="img/czech-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Чехии" />
                       </picture>
                     </div>
-                    <textarea class="country-description-list__change-text text"
-                      placeholder="План действий">Пить пиво и лазить по старым замкам, наслаждаться архитектурой и вот это все.</textarea>
+                    <textarea class="country-description-list__change-text text" placeholder="План действий"
+                      required>Пить пиво и лазить по старым замкам, наслаждаться архитектурой и вот это все.</textarea>
+                    <div class="country-description-list__change-text-invalid"></div>
                   </li>
                 </ul>
                 <svg class="add-plans__connection add-plans__connection--small" width="17" height="287">
@@ -1162,7 +1177,7 @@
                 </svg>
               </div>
               <div class="step-list__nav-buttons">
-                <button type="button" class="add-plans__button-step button button--middle-theme">
+                <button type="submit" class="add-plans__button-step button button--middle-theme">
                   <span class="button__caption">Отправить</span>
                   <svg class="add-plans__arrow" width="10" height="18" viewBox="0 0 10 18"
                     xmlns="http://www.w3.org/2000/svg">
@@ -1188,11 +1203,15 @@
       <h2 class="visually-hidden">Погнали?</h2>
       <a href="#">
         <picture>
-          <source media="(min-width: 1440px)" srcset="img/logo-large-dark.webp 1x, img/logo-large-dark@2x.webp 2x">
-          <source media="(min-width: 1440px)" srcset="img/logo-large-dark.png 1x, img/logo-large-dark@2x.png 2x">
-          <source media="(min-width: 768px)" srcset="img/logo-medium-dark.webp 1x, img/logo-medium-dark@2x.webp 2x">
-          <source media="(min-width: 768px)" srcset="img/logo-medium-dark.png 1x, img/logo-medium-dark@2x.png 2x">
-          <source srcset="img/logo-mobile-dark.webp 1x, img/logo-mobile-dark@2x.webp 2x">
+          <source media="(min-width: 1440px)" srcset="img/logo-large-dark.webp 1x, img/logo-large-dark@2x.webp 2x"
+            type="image/webp">
+          <source media="(min-width: 1440px)" srcset="img/logo-large-dark.png 1x, img/logo-large-dark@2x.png 2x"
+            type="image/png">
+          <source media="(min-width: 768px)" srcset="img/logo-medium-dark.webp 1x, img/logo-medium-dark@2x.webp 2x"
+            type="image/webp">
+          <source media="(min-width: 768px)" srcset="img/logo-medium-dark.png 1x, img/logo-medium-dark@2x.png 2x"
+            type="image/png">
+          <source srcset="img/logo-mobile-dark.webp 1x, img/logo-mobile-dark@2x.webp 2x" type="image/webp">
           <img class="page-fotter__logo logo" src="img/logo-mobile-dark.png" srcset="img/logo-mobile-dark@2x.png 2x"
             width="226" height="30" alt="Логотип" />
         </picture>
