--- a/source/directions.html
+++ b/source/directions.html
@@ -107,7 +107,7 @@
             <div class="text button__caption">АВТОРИЗАЦИЯ</div>
           </a>
         </div>
-        <div class="page-header__contact-list contact-list">
+        <div class="page-header__contact-list">
           <dl class="icon-list">
             <div class="page-header__icon icon-list__item">
               <dt class="icon-list__phone">
@@ -570,7 +570,7 @@
                 </svg>
               </button>
             </li>
-            <li class="step-list__item step-list__container">
+            <li class="step-list__item step-list__container step-list__item--step-2">
               <div class="step-list__header">
                 <div class="step-list__header-text">
                   <h3 class="step-list__caption">Шаг 2. <br>Маршрут</h3>
@@ -1108,7 +1108,7 @@
                 </div>
               </div>
             </li>
-            <li class="step-list__item step-list__container">
+            <li class="step-list__item step-list__container step-list__item--step-3">
               <div class="step-list__header">
                 <div class="step-list__header-text">
                   <h3 class="step-list__caption">Шаг 3. <br>Развлечения</h3>
