--- a/source/index.html
+++ b/source/index.html
@@ -106,7 +106,7 @@
             <div class="text button__caption">АВТОРИЗАЦИЯ</div>
           </a>
         </div>
-        <div class="page-header__contact-list contact-list">
+        <div class="page-header__contact-list">
           <dl class="icon-list">
             <div class="page-header__icon icon-list__item">
               <dt class="icon-list__phone">
